# ptt-mail-backup

./: .gitignore  .pylintrc  .travis.yml  README.rst  cute.py  requirements-lock.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
ptt_mail_backup/: __init__.py  ansi.py  article.py  byte_screen.py  byte_stream.py  ptt_bot.py
test/: test_stream.py
