[metadata]
name = ptt-mail-backup
version = 0.5.2
description = Backup PTT mail
author = eight
author_email = eight04@gmail.com
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: MIT License
  Natural Language :: Chinese (Traditional)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3 :: Only
  Topic :: Communications :: BBS
	
keywords = ptt, mail
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/ptt-mail-backup

[options]
zip_safe = True
packages = find:
install_requires =
    paramiko~=3.4
    ptt-article-parser~=0.6.0
    uao~=0.2.0
    wcwidth~=0.2.13
  
[options.entry_points]
console_scripts =
  ptt-mail-backup = ptt_mail_backup:main

[vpip]
command_fallback = python cute.py
